add about services and contact apps

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -7,7 +7,7 @@
 {% block content %}
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="{% pageurl page.get_children %}"">Home</a>
+        {% comment %} <a class="nav-item nav-link active" href="{% pageurl page.get_children %}">Home</a> {% endcomment %}
     </div>
 </nav>
     {{ page.body|richtext }}
