--- a/services/templates/services/service_page.html
+++ b/services/templates/services/service_page.html
@@ -7,9 +7,10 @@
 {% block content %}
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
-    {% for page in page.get_children %}
-        <a class="nav-item nav-link active" href="{% pageurl page %}">{{ page.title }}</a>
-    {% endfor %}
+   
+        <a class="nav-item nav-link active" href="{% pageurl page.get_parent %}">{{ page.get_parent.title }} </a>
+ 
+
     </div>
 </nav>
     {{ page.body|richtext }}
