copied content from draft add static routes to images

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,7 +1,6 @@
+@import './colors';
 @import './bootstrap-4.5.2/scss/bootstrap';
+@import './project.scss';
 
-
-body {
-    background-color: #aaa;
-    color: #fff;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
