--- a/home/templates/_includes/_navbar.html
+++ b/home/templates/_includes/_navbar.html
@@ -1,8 +1,13 @@
 {% load wagtailcore_tags %}
 
-
-<nav class="navbar navbar-expand navbar-light bg-light">
-    <div class="nav navbar-nav">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+  <a class="navbar-brand">FRANCIS INTERIORS</a>
+  <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+      aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavId">
+    <div class="nav navbar-nav ml-auto">
         {% if page.title == 'Home' %}
         
         {% else %}
@@ -18,7 +23,7 @@
         {% for page in page.get_children %}
         <a class="nav-item nav-link active" href="{% pageurl page %}">{{ page.title }}</a>
         
-        {% endfor %}   
-
-    </div>
+        {% endfor %}  
+  </div>
+  </div>
 </nav>
