--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -30,12 +30,14 @@
 
     {% include '_includes/_navbar.html' %}
 
-    <div class="container text-center">
-        <div class="p-5">
+    <div class="site">
+        <div class="site-content">
             {% block content %}
             {% endblock  %}
         </div>
-    </div>
+    </div> 
+    
+    {% include '_includes/_footer.html' %}
 
     {% block scripts %}
 
