--- a/home/templates/_includes/_navbar.html
+++ b/home/templates/_includes/_navbar.html
@@ -11,17 +11,17 @@
         {% if page.title == 'Home' %}
         
         {% else %}
-        <a class="nav-item nav-link active" href="{% pageurl page.get_parent %}">{{ page.get_parent.title }}</a>
+        <a class="nav-item nav-link" href="{% pageurl page.get_parent %}">{{ page.get_parent.title }}</a>
         {% endif %}
 
 
         {% for page in page.get_siblings %}
-        <a class="nav-item nav-link active" href="{% pageurl page %}">{{ page.title }}</a>
+        <a class="nav-item nav-link" href="{% pageurl page %}">{{ page.title }}</a>
         
         {% endfor %}   
 
         {% for page in page.get_children %}
-        <a class="nav-item nav-link active" href="{% pageurl page %}">{{ page.title }}</a>
+        <a class="nav-item nav-link" href="{% pageurl page %}">{{ page.title }}</a>
         
         {% endfor %}  
   </div>
