--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -5,5 +5,7 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+    <div class="p-5"></div>
     {{ page.body|richtext }}
+    
 {% endblock %}
