add bootstrap cdn, create new field to test on homepage, test deployment

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,7 +9,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-7 text">
-        <h1>Designed Spaces, Taken To The Next <span class="accent">Level</span></h1>
+        <div class="headline">{{ page.headline|richtext }}</div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, repellendus placeat quibusdam a dolor esse officia asperiores sit quisquam quo vitae possimus tenetur inventore exercitationem aut et dignissimos magnam. Corporis?</p>
         <p class="lead">
           <a class="btn btn-alt btn-lg rounded-pill" [routerLink]="['/services']" role="button">Learn More</a>
