--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
 @import './colors';
 @import './bootstrap-4.5.2/scss/bootstrap';
 @import './project.scss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+* {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
