--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,7 +12,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="https://kit.fontawesome.com/c7bd47bb33.js" crossorigin="anonymous"></script>
 
     {% block styles %}
 {% comment %} 
