testing feature detection

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -59,7 +59,7 @@
         <a class="btn btn-dark btn-lg rounded-pill" href="about/"  role="button">About Me</a>
       </div>
       <div class="col-12 col-md-6 box">
-        {% image page.service_image original class="img-fluid image-container"%}
+        {% image page.service_image fill-200x200-c0 class="img-fluid image-container"%}
       </div>
     </div>
     <div class="row row-2">
