--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -28,7 +28,7 @@
 
 <div class="services-container">
   <div class="container">
-    <p class="text-muted">{{ page.muted_text_top|richtext }}</p>
+ {{ page.muted_text_top|richtext }}
     <h1>{{ page.top_sentence|richtext }}</h1>
     <h1 class="second-line">{{ page.top_sentence_second|richtext }}</h1>
     <div class="row">
@@ -53,13 +53,13 @@
   <div class="call-to-action">
     <div class="row">
       <div class="col-12 col-md-6 text">
-        <p class="text-muted font-weight-bold">{{ page.muted_text_bottom|richtext }}</p>
+        {{ page.muted_text_bottom|richtext }}
         <h2>{{ page.service_title|richtext }}</h2>
-        <p>{{ page.service_content|richtext }}</p>
+        {{ page.service_content|richtext }}
         <a class="btn btn-dark btn-lg rounded-pill" href="about/"  role="button">About Me</a>
       </div>
       <div class="col-12 col-md-6 box">
-        {% image page.service_image fill-200x200-c0 class="img-fluid image-container"%}
+        {% image page.service_image original class="img-fluid image-container"%}
       </div>
     </div>
     <div class="row row-2">
