--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -123,21 +123,21 @@
 
   </div>
   <div class="container text-center">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner p-5">
         {% for loop_cycle in self.carousel_images.all %}
         {% image loop_cycle.carousel_image fill-5000x5000-c0 as img %}
         <div class="carousel-item {% if forloop.counter == 1 %} active {% endif %}">
-          <img src="{{ img.url }}" class="img-fluid d-block w-100" alt="{{ img.alt }}">
+          <img src="{{ img.url }}" class="d-block w-100" alt="{{ img.alt }}">
         </div>
         {% endfor %}
 
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
