--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -123,7 +123,7 @@
 
   </div>
   <div class="container text-center">
-    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselControls" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner p-5">
         {% for loop_cycle in self.carousel_images.all %}
         {% image loop_cycle.carousel_image fill-5000x5000-c0 as img %}
