--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -305,6 +305,7 @@ footer {
 
     }
   }
+
   .projects {
     .text {
       margin: 2rem auto;
@@ -355,6 +356,11 @@ footer {
     }
     .container-1 {
       margin: auto auto 2rem auto;
+    }
+    .container-2 {
+      .img-thumbnail {
+        border: 0.2rem solid $accent;
+      }
     }
     .container-3 {
       margin-top: 8rem;
