--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -5,7 +5,46 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    <div class="p-5"></div>
-    {{ page.body|richtext }}
-    
-{% endblock %}
+<div class="contact">
+    <div class="container-fluid">
+        <h1>Book A Meeting</h1>
+        <div class="choice-1">
+            <h1 class="item-name" data-toggle="collapse" data-target="#collapse1" aria-expanded="false"
+                aria-controls="collapseExample"><span>1.</span> Choose a service</h1>
+            <div class="collapse" id="collapse1">
+                <div class="row">
+                
+
+                        <div class="btn card col-12 col-md-4" >
+                            <div class="card-body bg-accent">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body bg-accent">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4" >
+                            <div class="card-body bg-accent">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+
+                   
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+    {% endblock %}
