--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -68,21 +68,24 @@
     background-color: $alt-bg !important;
   }
 
- 
+
 
 }
 
 .services-container {
   p:nth-child(1) {
     font-weight: 900;
-  
+
   }
+
   h1 {
     font-weight: 600;
   }
-  .second-line  {
+
+  .second-line {
     color: $accent;
   }
+
   .row {
     margin: auto;
 
@@ -121,10 +124,11 @@
         max-height: 100%;
         display: block;
       }
-      .box{
-        height: 100%;       
+
+      .box {
+        height: 100%;
         padding: 0 !important;
-    }  
+      }
     }
 
     .row-2 {
@@ -150,6 +154,7 @@
   border-top: 0.2px solid rgba($accent, 0.2);
   border-bottom: 0.2px solid rgba($accent, 0.2);
   padding: 5rem 1rem;
+
   h3 {
     font-weight: 900;
   }
@@ -166,9 +171,11 @@
 
 .service-page-container {
   margin-top: 10rem;
+
   .text-accent {
     color: $accent;
   }
+
   .img-thumbnail {
     border: 0.2rem solid rgba($accent, 0.6);
   }
@@ -197,10 +204,12 @@
 
   .container-2 {
     text-align: center;
+
     img {
       width: 70%;
       margin: 1rem auto;
     }
+
     .img-thumbnail {
       border: 0.2rem solid rgba($accent, 0.2);
     }
@@ -211,10 +220,12 @@
     padding: 2rem 0rem;
     border-top: 0.2rem solid rgba($accent, 0.2);
     text-align: center;
+
     p {
       width: 80%;
       margin: auto;
     }
+
     .btn-alt {
       margin: 2rem auto;
       background-color: $alt-color;
@@ -224,51 +235,76 @@
 
 .about {
   margin: 5rem auto 5rem auto;
+
   .name {
     color: $accent;
     text-align: right;
   }
 
 
-  img {
-    float: left;
-    padding: 5rem;
-    margin: 0;
+  .bio {
+    img {
+      float: left;
+      padding: 5rem;
+      margin: 0;
+    }
+
   }
+
+  .overlay {
+    filter: hue-rotate(72deg);
+  }
+
   .skills {
     padding: 2rem;
   }
+
   .call-to-action {
     h3 {
       margin-top: 3rem;
     }
+
     .phone-number {
       color: $alt-bg;
     }
-    .overlay {
-      background: url('src/assets/images/profile/eleventh-wave.jpg') no-repeat center;
-      background-size: contain;
-      .my-image {
-        background-color: rgba($alt-bg, 0.5);
-        height: 50vh;
-        width: 75%;
-        margin: 1rem auto;
 
-      }
   }
 }
+
+.contact {
+  margin-top: 5rem;
+  .row {
+    padding: 0rem 2rem;
+    justify-content: center;
+  }
+  .bg-accent {
+    background-color: $alt-bg;
+  }
+  h1 {
+    background-color: #aaaaaa47;
+    margin: 2rem 0;
+    padding: 2rem;
+    color: $accent;
+    font-weight: 900;
+  }
+  .card {
+    margin: 0.4rem 0rem;
+  }
 }
 
 footer {
   background-color: $alt-bg;
   padding: 2rem 0rem;
+
   a {
     color: $accent;
   }
+
   a:hover {
     color: rgba($accent, 0.2);
     text-decoration: none;
   }
+
   .social {
     i {
       color: $accent;
@@ -309,6 +345,7 @@ footer {
   .projects {
     .text {
       margin: 2rem auto;
+
       :first-child {
         font-size: 1.6rem;
         color: $accent;
@@ -317,16 +354,19 @@ footer {
       }
     }
   }
+
   .services-container {
     .call-to-action {
       .row {
         .text {
           padding: 10% 3rem 2rem 2rem;
+
           h2 {
             margin-bottom: 5rem;
           }
         }
       }
+
       .row-2 {
         .offer {
           i {
@@ -334,7 +374,7 @@ footer {
           }
         }
       }
-    }  
+    }
   }
 
   .service-page-container {
@@ -345,6 +385,7 @@ footer {
         }
       }
     }
+
     .text {
       width: 70%;
       position: relative;
@@ -352,18 +393,22 @@ footer {
       bottom: 10rem;
       padding: 3rem;
       right: 0.2rem;
- 
+
     }
+
     .container-1 {
       margin: auto auto 2rem auto;
     }
+
     .container-2 {
       .img-thumbnail {
         border: 0.2rem solid $accent;
       }
     }
+
     .container-3 {
       margin-top: 8rem;
+
       p {
         margin: auto;
         width: 60%;
@@ -374,27 +419,50 @@ footer {
   .about {
     .bio {
       margin-bottom: 10rem;
+
       .name {
         padding-top: 0rem;
         color: $accent;
       }
+
       h1 {
         padding-top: 5rem;
         color: $alt-bg;
       }
     }
-    img {
-      width: 50%;
-      padding: 2rem;
-      margin: 0;
 
+    .bio {
+      img {
+        width: 50%;
+        padding: 2rem;
+        margin: 0;
+
+      }
     }
+
     .skills {
       margin-top: 20rem;
       padding: 2rem 5rem;
       float: none;
     }
 
+    .overlay {
+      height: 100%;
+
+      img {
+        margin: auto;
+        height: 30rem;
+      }
+    }
+
+  }
+  .contact {
+    .row {
+      padding: 0 1rem;
+    }
+    .card {
+      margin: 2rem 3rem;
+    }
   }
 
 }
@@ -407,13 +475,15 @@ footer {
       padding: 4rem 4rem 4rem 4rem;
       position: relative;
       left: 2vw;
+
       h1 {
-  
+
         font-size: 4.5rem;
         line-height: 1.2;
       }
     }
   }
+
   .services-container {
     .call-to-action {
       .row {
@@ -421,10 +491,12 @@ footer {
           p:nth-child(1) {
             font-weight: 900;
           }
+
           h2 {
             font-size: 3rem;
             margin-bottom: 10rem;
           }
+
           p:nth-child(3) {
             font-size: 1.3rem;
           }
@@ -432,6 +504,7 @@ footer {
       }
     }
   }
+
   .service-page-container {
     .container-2 {
       h3 {
@@ -450,25 +523,31 @@ footer {
   .about {
     .bio {
       margin-bottom: 0rem;
+
       h1 {
         padding-top: 5rem;
       }
     }
+
     .name {
       padding-top: 0rem;
 
     }
 
-    img {
-      width: 40%;
-      padding: 0rem;
-      margin: 3rem;
+    .bio {
+      img {
+        width: 40%;
+        padding: 0rem;
+        margin: 3rem;
+      }
     }
+
     .skills {
       margin-top: 0rem;
       margin-bottom: 5rem;
     }
   }
+
   .carousel {
     .carousel-inner {
       margin: auto;
@@ -480,18 +559,22 @@ footer {
 @media (min-width: 1200px) {
   .jumbotron {
     margin-bottom: 12rem;
+
     .col-md-7 {
       padding: 5rem 3rem 5rem 6rem;
     }
+
     .headline {
       :first-child {
         font-size: 3.5rem;
+      }
     }
-    }
+
     .image-container {
       max-width: 150%;
-    } 
+    }
   }
+
   .services-container {
     h1 {
       font-size: 4rem;
@@ -504,25 +587,30 @@ footer {
 @media (min-width: 1500px) {
   .jumbotron {
     margin-bottom: 20rem;
+
     .col-md-7 {
       padding: 5rem 3rem 5rem 6rem;
     }
+
     .headline {
       :first-child {
         font-size: 7rem;
-    }
+      }
+
       :nth-child(2) {
         font-size: 1.5rem;
       }
+
       .btn-alt {
         padding: 1rem;
         font-size: 2rem;
-      } 
+      }
 
     }
+
     .image-container {
       max-width: 170%;
-    } 
+    }
   }
 
 }
