--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -7,42 +7,115 @@
 {% block content %}
 <div class="contact">
     <div class="container-fluid">
-        <h1>Book A Meeting</h1>
-        <div class="choice-1">
-            <h1 class="item-name" data-toggle="collapse" data-target="#collapse1" aria-expanded="false"
-                aria-controls="collapseExample"><span>1.</span> Choose a service</h1>
-            <div class="collapse" id="collapse1">
-                <div class="row">
-                
+        <div class="jumbotron-fluid">
+            <h1 class="jumbotron-title mb-0">Book A Meeting</h1>
+        </div>
+        <div class="contact-form-container">
+            <div class="choice-1">
+                <h1 class="item-name" data-toggle="collapse" data-target="#collapse1"><span class="number">1.</span>
+                    Choose a service</h1>
+                <div class="collapse" id="collapse1">
+                    <div class="row">
 
-                        <div class="btn card col-12 col-md-4" >
-                            <div class="card-body bg-accent">
+
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="btn card col-12 col-md-4">
-                            <div class="card-body bg-accent">
+                            <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
-                        <div class="btn card col-12 col-md-4" >
-                            <div class="card-body bg-accent">
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
 
-                   
+
+                    </div>
                 </div>
             </div>
+
+            <div class="choice-2">
+                <h1 class="item-name" data-toggle="collapse" data-target="#collapse2"><span class="number">2.</span>
+                    Date and time</h1>
+                <div class="collapse" id="collapse2">
+                    <div class="row">
+
+
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="choice-3">
+                <h1 class="item-name" data-toggle="collapse" data-target="#collapse3"><span class="number">3.</span>
+                    Your Information</h1>
+                <div class="collapse" id="collapse3">
+                    <div class="row">
+
+
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="btn card col-12 col-md-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
-
-
 
 
     </div>
