--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -248,6 +248,7 @@
       float: left;
       padding: 5rem;
       margin: 0;
+      filter: brightness(61%) saturate(4) hue-rotate(24deg);
     }
 
   }
