finish contact page

--- a/about/templates/about/about_page.html
+++ b/about/templates/about/about_page.html
@@ -16,9 +16,9 @@
 
   <div class="skills">
     <h3>{{ page.skills_title|richtext }}</h3>
-    <ul class="list-group">
+    <div class="text-center">
       <p>{{ page.skills_list|richtext }}</p>
-    </ul>
+    </div>
   </div>
   <div class="call-to-action container-fluid">
     <div class="row">
